--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <header class="site-header">
-    <h1>Rute Kost Ke DTGD FT UGM</h1>
+    <h1>Web Map Tempat Wisata Desa Sanggu</h1>
     </header>
     <div id="map"></div>
 
