--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>    
-    <link rel = "icon" href = "ugm.png" 
+    <link rel = "icon" href = "barito selatan.png" 
     type = "image/x-icon">
     <style>
        body {
