--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Tempat Wisata Desa Sanggu</title>
     <link rel="stylesheet" href="leaflet.css" />
     <script src="leaflet.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
-    <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>    
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel = "icon" href = "barito selatan.png" 
     type = "image/x-icon">
     <style>
