--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         }
     </style>
 </head>
+ <title>Web Map Tempat Wisata Desa Sanggu</title>
+    <style>
+        .site-header {
+            text-align: center;
+            padding: 20px 0;
+        }
+        .site-header h1 {
+            margin: 0;
+        }
+        #map {
+            height: 400px;
+            background-color: #f0f0f0;
+        }
+    </style>
 <body>
     <header class="site-header">
     <h1>Web Map Tempat Wisata Desa Sanggu</h1>
