--- a/index.html
+++ b/index.html
@@ -34,22 +34,9 @@
         }
     </style>
 </head>
- <title>Web Map Tempat Wisata Desa Sanggu</title>
-    <style>
-        .site-header {
-            text-align: center;
-            padding: 20px 0;
-        }
-        .site-header h1 {
-            margin: 0;
-        }
-        #map {
-            height: 400px;
-            background-color: #f0f0f0;
-        }
-    </style>
 <body>
-    <header class="site-header">
+    <header class="site-header"
+         text-align = "center">
     <h1>Web Map Tempat Wisata Desa Sanggu</h1>
     </header>
     <div id="map"></div>
