--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tempat Wisata Desa Sanggu</title>
-    <link rel="stylesheet" href="leaflet.css" />
-    <script src="leaflet.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+   <!-- Leaflet Routing Machine -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
+    <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
     <link rel = "icon" href = "barito selatan.png" 
     type = "image/x-icon">
     <style>
@@ -35,8 +34,7 @@
     </style>
 </head>
 <body>
-    <header class="site-header"
-         text-align = "center">
+   <header class="site-header" style="text-align:center;">
     <h1>Web Map Tempat Wisata Desa Sanggu</h1>
     </header>
     <div id="map"></div>
