--- a/index.html
+++ b/index.html
@@ -52,50 +52,45 @@
     // Marker & Popup
     var lokasi = [
       {
-        koordinat: [-7.76388, 110.37280],
-        title: "DTGD FT UGM",
-        popup: "<h3>Departemen Teknik Geodesi</h3><p>DTGD berdiri pada Agustus 1959 sebagai bagian dari Geodesi dan Geologi.</p><img src='./foto/dtgd.jpeg' style='width:150px'>"
+        koordinat: [-1.666007036610256, 114.89398250906554],
+        title: "Danau Sanggu",
+        popup: "<h3>Danau Sanggu.</h3><p>Danau Sanggu.</p><img src='./foto/dtgd.jpeg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76422, 110.37306],
-        title: "DTSL FT UGM",
-        popup: "<h3>Departemen Teknik Sipil dan Lingkungan</h3><p>Fokus pada struktur, transportasi, lingkungan, dll.</p><img src='./foto/dtsl.jpg' style='width:150px'>"
+        koordinat: [-1.6874914116354776, 114.89046937054741],
+        title: "Danau Malawen",
+        popup: "<h3>Danau Malawen.</h3><p>Danau Malawen.</p><img src='./foto/dtsl.jpg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76595, 110.37314],
-        title: "DTGL FT UGM",
-        popup: "<h3>Departemen Teknik Geologi</h3><p>Berdiri 1959, berawal dari gabungan Geodesi dan Geologi.</p><img src='./foto/dtgl.jpg' style='width:150px'>"
+        koordinat: [-1.6569946356896355, 114.92656030721483],
+        title: "Lewu Betang Nansarunai",
+        popup: "<h3>Lewu Betang Nansarunai</h3><p>Lewu Betang Nansarunai.</p><img src='./foto/dtgl.jpg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76625, 110.37282],
-        title: "DTNTF FT UGM",
-        popup: "<h3>Teknik Nuklir dan Teknik Fisika</h3><p>Memiliki dua program studi sarjana.</p><img src='./foto/dtntf.jpg' style='width:150px'>"
+        koordinat: [-1.6700399613014312, 114.90543916673718],
+        title: "Pemandian Banyu Habang",
+        popup: "<h3>Pemandian Banyu Habang</h3><p>Pemandian Banyu Habang.</p><img src='./foto/dtntf.jpg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76596, 110.37162],
-        title: "DTETI FT UGM",
-        popup: "<h3>Teknik Elektro dan Teknologi Informasi</h3><p>Program studi: Elektro, TI, Biomedis.</p><img src='./foto/dteti.jpg' style='width:150px'>"
+        koordinat: [-1.67016, 114.90573],
+        title: "Pemandian Wenu Janang",
+        popup: "<h3>Pemandian Wenu Janang</h3><p>Pemandian Wenu Janang.</p><img src='./foto/dteti.jpg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76564, 110.37103],
-        title: "DTMI FT UGM",
-        popup: "<h3>Teknik Mesin dan Industri</h3><p>Program S1-S3 di bidang Mesin dan Industri.</p><img src='./foto/dtmi.jpg' style='width:150px'>"
+        koordinat: [-1.67084, 114.90593],
+        title: "Pemandian Cendana Harum",
+        popup: "<h3>Pemandian Cendana Harum</h3><p>Pemandian Cendana Harum</p><img src='./foto/dtmi.jpg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76517, 110.37133],
-        title: "DTK FT UGM",
-        popup: "<h3>Departemen Teknik Kimia</h3><p>Lahir dalam semangat revolusi kemerdekaan Indonesia.</p><img src='./foto/dtk.jpg' style='width:150px'>"
+        koordinat: [-1.67044, 114.90530],
+        title: "Pemandian Air Merah Jaya Raya",
+        popup: "<h3>Pemandian Air Merah Jaya Raya</h3><p>Pemandian Air Merah Jaya Raya</p><img src='./foto/dtk.jpg' style='width:150px'>"
       },
       {
-        koordinat: [-7.76381, 110.37208],
-        title: "DTAP FT UGM",
-        popup: "<h3>Teknik Arsitektur dan Perencanaan</h3><p>Didirikan pada 1962 dengan dukungan dari UCLA.</p><img src='./foto/dtap.jpg' style='width:150px'>"
+        koordinat: [-1.65867, 114.92616],
+        title: "Mambarak Forest",
+        popup: "<h3>Mambarak Forest</h3><p>Mambarak Forest</p><img src='./foto/dtap.jpg' style='width:150px'>"
       },
-      {
-        koordinat: [-7.75982, 110.37383],
-        title: "Kost Lisbeth",
-        popup: "<h3>Kost Putri Abi Pogung</h3>"
-      }
     ];
 
     // Tambahkan semua marker
