--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <script>
     // Inisialisasi Peta
-    var map = L.map('map').setView([-7.76342, 110.37327], 16);
+    var map = L.map('map').setView([-1.6559980686949187, 114.89687619465441], 16);
 
     // Basemap dari OSM
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
