--- a/index.html
+++ b/index.html
@@ -54,42 +54,42 @@
       {
         koordinat: [-1.666007036610256, 114.89398250906554],
         title: "Danau Sanggu",
-        popup: "<h3>Danau Sanggu.</h3><p>Danau Sanggu.</p><img src='./foto/dtgd.jpeg' style='width:150px'>"
+        popup: "<h3>Danau Sanggu.</h3><p>Danau Sanggu.</p><img src='./foto/Danau Sanggu.jpeg' style='width:150px'>"
       },
       {
         koordinat: [-1.6874914116354776, 114.89046937054741],
         title: "Danau Malawen",
-        popup: "<h3>Danau Malawen.</h3><p>Danau Malawen.</p><img src='./foto/dtsl.jpg' style='width:150px'>"
+        popup: "<h3>Danau Malawen.</h3><p>Danau Malawen.</p><img src='./foto/Danau Malawen.jpg' style='width:150px'>"
       },
       {
         koordinat: [-1.6569946356896355, 114.92656030721483],
         title: "Lewu Betang Nansarunai",
-        popup: "<h3>Lewu Betang Nansarunai</h3><p>Lewu Betang Nansarunai.</p><img src='./foto/dtgl.jpg' style='width:150px'>"
+        popup: "<h3>Lewu Betang Nansarunai</h3><p>Lewu Betang Nansarunai.</p><img src='./foto/Betang.jpeg' style='width:150px'>"
       },
       {
         koordinat: [-1.6700399613014312, 114.90543916673718],
         title: "Pemandian Banyu Habang",
-        popup: "<h3>Pemandian Banyu Habang</h3><p>Pemandian Banyu Habang.</p><img src='./foto/dtntf.jpg' style='width:150px'>"
+        popup: "<h3>Pemandian Banyu Habang</h3><p>Pemandian Banyu Habang.</p><img src='./foto/Banyu Habang.JPG' style='width:150px'>"
       },
       {
         koordinat: [-1.67016, 114.90573],
         title: "Pemandian Wenu Janang",
-        popup: "<h3>Pemandian Wenu Janang</h3><p>Pemandian Wenu Janang.</p><img src='./foto/dteti.jpg' style='width:150px'>"
+        popup: "<h3>Pemandian Wenu Janang</h3><p>Pemandian Wenu Janang.</p><img src='./foto/Wenu Janang.JPG' style='width:150px'>"
       },
       {
         koordinat: [-1.67084, 114.90593],
         title: "Pemandian Cendana Harum",
-        popup: "<h3>Pemandian Cendana Harum</h3><p>Pemandian Cendana Harum</p><img src='./foto/dtmi.jpg' style='width:150px'>"
+        popup: "<h3>Pemandian Cendana Harum</h3><p>Pemandian Cendana Harum</p><img src='./foto/Cendana Harum.JPG' style='width:150px'>"
       },
       {
         koordinat: [-1.67044, 114.90530],
         title: "Pemandian Air Merah Jaya Raya",
-        popup: "<h3>Pemandian Air Merah Jaya Raya</h3><p>Pemandian Air Merah Jaya Raya</p><img src='./foto/dtk.jpg' style='width:150px'>"
+        popup: "<h3>Pemandian Air Merah Jaya Raya</h3><p>Pemandian Air Merah Jaya Raya</p><img src='./foto/Air Merah.JPG' style='width:150px'>"
       },
       {
         koordinat: [-1.65867, 114.92616],
         title: "Mambarak Forest",
-        popup: "<h3>Mambarak Forest</h3><p>Mambarak Forest</p><img src='./foto/dtap.jpg' style='width:150px'>"
+        popup: "<h3>Mambarak Forest</h3><p>Mambarak Forest</p><img src='./foto/Mambarak Forest.JPG' style='width:150px'>"
       },
     ];
 
