--- a/index.html
+++ b/index.html
@@ -81,10 +81,15 @@
         title: "Pemandian Cendana Harum",
         popup: "<h3>Pemandian Cendana Harum</h3><p>Pemandian Cendana Harum</p><img src='./foto/Cendana Harum.JPG' style='width:150px'>"
       },
-      {
+     {
         koordinat: [-1.67044, 114.90530],
         title: "Pemandian Air Merah Jaya Raya",
-        popup: "<h3>Pemandian Air Merah Jaya Raya</h3><img src='./foto/Air Merah.JPG' style='width:150px'><p>Pemandian Air Merah Jaya Raya, yang mulai beroperasi sejak tahun 2022, menawarkan pengalaman wisata alam dengan harga tiket masuk sebesar Rp10.000 untuk orang dewasa dan Rp5.000 untuk anak-anak. Destinasi ini merupakan kawasan pemandian yang mengandalkan keindahan alami Sungai Wenu sebagai daya tarik utama, dengan ciri khas air berwarna merah. Pengunjung dapat menikmati berbagai aktivitas, seperti berenang, bermain air, atau sekadar bersantai bersama keluarga dan teman-teman sambil meresapi keasrian alam sekitar. Tempat ini terbuka untuk umum setiap hari dari pukul 06.00 hingga 18.00.</p>"
+        popup: `
+          <h3>Pemandian Air Merah Jaya Raya</h3>
+          <img src='./foto/Air Merah.JPG' style='width:150px'>
+          <p class='popup-justify'>
+            Pemandian Air Merah Jaya Raya, yang mulai beroperasi sejak tahun 2022, menawarkan pengalaman wisata alam dengan harga tiket masuk sebesar Rp10.000 untuk orang dewasa dan Rp5.000 untuk anak-anak. Destinasi ini merupakan kawasan pemandian yang mengandalkan keindahan alami Sungai Wenu sebagai daya tarik utama, dengan ciri khas air berwarna merah. Pengunjung dapat menikmati berbagai aktivitas, seperti berenang, bermain air, atau sekadar bersantai bersama keluarga dan teman-teman sambil meresapi keasrian alam sekitar. Tempat ini terbuka untuk umum setiap hari dari pukul 06.00 hingga 18.00.
+          </p>`
       },
       {
         koordinat: [-1.65867, 114.92616],
