--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>Web Map Tempat Wisata Desa Sanggu</h1>
+    <h1>Tempat Wisata Desa Sanggu</h1>
   </header>
 
   <div id="map"></div>
