--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       {
         koordinat: [-1.67016, 114.90573],
         title: "Pemandian Wenu Janang",
-        popup: "<h3>Pemandian Wenu Janang</h3><p class='popup-justify'>Pemandian Wenu Janang.</p><img src='./foto/Wenu Janang.JPG' style='width:150px'>"
+        popup: "<h3>Pemandian Wenu Janang</h3><p class='popup-justify'>Sesuai dengan arti namanya, Wenu Janang berarti "Sungai Wenu yang ramai". Tempat wisata ini mulai dibuka sejak tahun 2018 dan berlokasi berdekatan dengan Air Merah Jaya Raya, menawarkan jenis wisata yang serupa. Keduanya sama-sama mengandalkan keindahan Sungai Wenu sebagai daya tarik utama. Di Wenu Janang, pengunjung dapat menikmati kegiatan seperti bermain air, berenang, bersantai bersama keluarga, atau menyanyi karaoke sembari menikmati suasana alami yang tenang. Lingkungan yang sejuk dan asri menjadikannya tempat yang ideal untuk relaksasi. Tempat ini buka setiap hari dari pukul 06.00 hingga 18.00, dengan harga tiket masuk yang terjangkau, yaitu Rp10.000 untuk orang dewasa dan Rp5.000 untuk anak-anak.
+</p><img src='./foto/Wenu Janang.JPG' style='width:150px'>"
       },
       {
         koordinat: [-1.67084, 114.90593],
