--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
       {
         koordinat: [-1.65867, 114.92616],
         title: "Mambarak Forest",
-        popup: "<h3>Mambarak Forest</h3><p class='popup-justify'>Mambarak Forest.</p><img src='./foto/Mambarak Forest.JPG' style='width:150px'>"
+        popup: `
+          <h3 class='popup-justify'>Mambarak Forest</h3>
+          <img src='./foto/Mambarak Forest.JPG' style='width:150px'>
+          <p class='popup-justify'>
+          Mambarak Forest.
+          </p>`
       }
     ];
 
