--- a/index.html
+++ b/index.html
@@ -79,22 +79,42 @@
       {
         koordinat: [-1.666007, 114.893982],
         title: "Danau Sanggu",
-        popup: "<h3>Danau Sanggu</h3><p class='popup-justify'>Danau Sanggu.</p><img src='./foto/Danau Sanggu.jpeg' style='width:150px'>"
+        popup: `
+          <h3>Danau Sanggu</h3>
+          <img src='./foto/Danau Sanggu.jpeg' style='width:150px'>
+          <p class='popup-justify'>
+          Danau Sanggu.
+          </p>`
       },
       {
         koordinat: [-1.687491, 114.890469],
         title: "Danau Malawen",
-        popup: "<h3>Danau Malawen</h3><p class='popup-justify'>Danau Malawen.</p><img src='./foto/Danau Malawen.jpg' style='width:150px'>"
+        popup: `
+          <h3>Danau Malawen</h3>
+          <img src='./foto/Danau Malawen.jpg' style='width:150px'>
+          <p class='popup-justify'>
+          Danau Malawen.
+          </p>`
       },
       {
         koordinat: [-1.656995, 114.926560],
         title: "Lewu Betang Nansarunai",
-        popup: "<h3>Lewu Betang Nansarunai</h3><p class='popup-justify'>Lewu Betang Nansarunai.</p><img src='./foto/Betang.jpeg' style='width:150px'>"
+        popup: `
+          <h3>Lewu Betang Nansarunai</h3>
+          <img src='./foto/Betang.jpeg' style='width:150px'>
+          <p class='popup-justify'>
+          Lewu Betang Nansarunai.
+          </p>`
       },
       {
         koordinat: [-1.67004, 114.90543],
         title: "Pemandian Banyu Habang",
-        popup: "<h3>Pemandian Banyu Habang</h3><p class='popup-justify'>Pemandian Banyu Habang.</p><img src='./foto/Banyu Habang.JPG' style='width:150px'>"
+        popup: `
+          <h3>Pemandian Banyu Habang</h3>
+          <img src='./foto/Banyu Habang.JPG' style='width:150px'>
+          <p class='popup-justify'>
+          Pemandian Banyu Habang.
+          </p>`
       },
       {
         koordinat: [-1.67016, 114.90573],
@@ -109,13 +129,18 @@
       {
         koordinat: [-1.67084, 114.90593],
         title: "Pemandian Cendana Harum",
-        popup: "<h3>Pemandian Cendana Harum</h3><p class='popup-justify'>Pemandian Cendana Harum.</p><img src='./foto/Cendana Harum.JPG' style='width:150px'>"
+        popup: `
+          <h3>Pemandian Cendana Harum</h3>
+          <img src='./foto/Cendana Harum.JPG' style='width:150px'>
+          <p class='popup-justify'>
+          Pemandian Cendana Harum.
+          </p>`
       },
       {
         koordinat: [-1.67044, 114.90530],
         title: "Pemandian Air Merah Jaya Raya",
         popup: `
-          <h3 class='popup-justify'>Pemandian Air Merah Jaya Raya</h3>
+          <h3>Pemandian Air Merah Jaya Raya</h3>
           <img src='./foto/Air Merah.JPG' style='width:150px'>
           <p class='popup-justify'>
             Pemandian Air Merah Jaya Raya, yang mulai beroperasi sejak tahun 2022, menawarkan pengalaman wisata alam dengan harga tiket masuk sebesar Rp10.000 untuk orang dewasa dan Rp5.000 untuk anak-anak. Destinasi ini merupakan kawasan pemandian yang mengandalkan keindahan alami Sungai Wenu sebagai daya tarik utama, dengan ciri khas air berwarna merah. Pengunjung dapat menikmati berbagai aktivitas, seperti berenang, bermain air, atau sekadar bersantai bersama keluarga dan teman-teman sambil meresapi keasrian alam sekitar. Tempat ini terbuka untuk umum setiap hari dari pukul 06.00 hingga 18.00.
