--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <h3>Lewu Betang Nansarunai</h3>
           <img src='./foto/Betang.jpeg' style='width:150px'>
           <p class='popup-justify'>
-          Lewu Betang Nansarunai.
+          Betang Nan Sarunai adalah destinasi wisata budaya yang berdiri sejak tahun 2018 dan dibangun untuk melestarikan budaya Dayak, khususnya rumah adat Betang, di tengah perkembangan zaman. Nama "Betang Nan Sarunai" sendiri mencerminkan nilai sejarah, di mana "Nan Sarunai" merujuk pada Kerajaan Dayak masa lalu dan "Betang" berarti rumah. Di tempat ini, pengunjung dapat merasakan nuansa khas rumah adat Dayak, berkeliling, berfoto, menikmati permainan ATV dengan tarif Rp20.000 untuk durasi 15–20 menit, melakukan sesi foto atau video dengan latar rumah betang, hingga berkemah menggunakan perlengkapan sendiri. Tiket masuk ke lokasi ini sebesar Rp10.000 untuk dewasa dan Rp5.000 untuk anak-anak, dan destinasi ini buka setiap hari mulai pukul 07.30 hingga 17.00 WIB.
           </p>`
       },
       {
@@ -133,7 +133,7 @@
           <h3>Pemandian Cendana Harum</h3>
           <img src='./foto/Cendana Harum.JPG' style='width:150px'>
           <p class='popup-justify'>
-          Pemandian Cendana Harum.
+          Cendana Harum adalah destinasi wisata air terbaru di Desa Sanggu yang mulai beroperasi sejak tahun 2022. Menghadirkan konsep permainan air bernuansa Bali, tempat ini menawarkan suasana segar dan cocok untuk rekreasi keluarga. Tersedia berbagai kolam dengan kedalaman berbeda, dari kolam anak-anak hingga kolam dewasa, serta fasilitas pendukung seperti gazebo, area barbeque, dan mushola. Selain berenang dan bersantai, pengunjung juga dapat menikmati waktu luang sambil menanti kolam pemancingan yang sedang dipersiapkan oleh pengelola. Tempat ini buka setiap hari pukul 07.00–18.00, dengan harga tiket masuk Rp10.000 untuk dewasa dan Rp5.000 untuk anak-anak.
           </p>`
       },
       {
