--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <!-- Leaflet Search Plugin -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-search@2.9.8/dist/leaflet-search.min.css" />
-  <script src="https://unpkg.com/leaflet-control-search@2.9.8/dist/leaflet-search.min.js"></script>
+ <link rel="stylesheet" href="./leaflet-search/leaflet-search.min.css" />
+  <script src="./leaflet-search/leaflet-search.min.js"></script>
 
   <style>
     body {
