--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-  <!-- Tambahkan plugin Leaflet Search -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-search@2.9.9/dist/leaflet-search.min.css" />
-  <script src="https://unpkg.com/leaflet-control-search@2.9.9/dist/leaflet-search.min.js"></script>
+   <!-- Leaflet Search lokal -->
+  <link rel="stylesheet" href="leaflet-search/leaflet-search.min.css" />
+  <script src="leaflet-search/leaflet-search.min.js"></script>
 
   <style>
     body {
