Update index.html deskripsi

--- a/index.html
+++ b/index.html
@@ -83,17 +83,7 @@
           <h3>Danau Sanggu</h3>
           <img src='./foto/Danau Sanggu.jpeg' style='width:150px'>
           <p class='popup-justify'>
-          Danau Sanggu.
-          </p>`
-      },
-      {
-        koordinat: [-1.687491, 114.890469],
-        title: "Danau Malawen",
-        popup: `
-          <h3>Danau Malawen</h3>
-          <img src='./foto/Danau Malawen.jpg' style='width:150px'>
-          <p class='popup-justify'>
-          Danau Malawen.
+          Danau Sanggu merupakan salah satu objek wisata tertua yang ada di Desa Sanggu dan telah dibuka sejak tahun 2002. Sebagai perintis dalam pengembangan sektor pariwisata desa, Danau Sanggu tetap menjadi destinasi favorit masyarakat hingga kini. Tempat ini menawarkan berbagai aktivitas menarik, seperti berkeliling danau dengan kapal, bermain sepeda air, bersantai di taman, atau berenang, baik langsung di danau maupun di kolam renang yang tersedia di area rekreasi. Tiket masuknya pun sangat terjangkau, hanya Rp5.000 untuk semua kalangan. Destinasi ini buka setiap hari, mulai pukul 07.30 hingga 18.00 WIB.
           </p>`
       },
       {
@@ -104,16 +94,6 @@
           <img src='./foto/Betang.jpeg' style='width:150px'>
           <p class='popup-justify'>
           Betang Nan Sarunai adalah destinasi wisata budaya yang berdiri sejak tahun 2018 dan dibangun untuk melestarikan budaya Dayak, khususnya rumah adat Betang, di tengah perkembangan zaman. Nama "Betang Nan Sarunai" sendiri mencerminkan nilai sejarah, di mana "Nan Sarunai" merujuk pada Kerajaan Dayak masa lalu dan "Betang" berarti rumah. Di tempat ini, pengunjung dapat merasakan nuansa khas rumah adat Dayak, berkeliling, berfoto, menikmati permainan ATV dengan tarif Rp20.000 untuk durasi 15–20 menit, melakukan sesi foto atau video dengan latar rumah betang, hingga berkemah menggunakan perlengkapan sendiri. Tiket masuk ke lokasi ini sebesar Rp10.000 untuk dewasa dan Rp5.000 untuk anak-anak, dan destinasi ini buka setiap hari mulai pukul 07.30 hingga 17.00 WIB.
-          </p>`
-      },
-      {
-        koordinat: [-1.67004, 114.90543],
-        title: "Pemandian Banyu Habang",
-        popup: `
-          <h3>Pemandian Banyu Habang</h3>
-          <img src='./foto/Banyu Habang.JPG' style='width:150px'>
-          <p class='popup-justify'>
-          Pemandian Banyu Habang.
           </p>`
       },
       {
@@ -153,7 +133,7 @@
           <h3 class='popup-justify'>Mambarak Forest</h3>
           <img src='./foto/Mambarak Forest.JPG' style='width:150px'>
           <p class='popup-justify'>
-          Mambarak Forest.
+          Mambarak Forest merupakan kawasan wisata alam terpadu yang tengah dikembangkan. Nama destinasi ini diambil dari Sungai Mabarak yang mengalir di dalam area tersebut. Dengan luas wilayah sekitar 200 hektar, Mambarak Forest dirancang untuk menawarkan berbagai zona wisata tanpa melakukan banyak perubahan terhadap kondisi alam aslinya. Konsep "Love in Forest" menjadi dasar dalam pengembangan kawasan ini dengan komitmen untuk melestarikan keanekaragaman hayati yang ada. Di sekitar area sungai, khususnya pada zona glamping dan camping, pengunjung dapat menyaksikan satwa endemik seperti bekantan (uwak-uwak) serta berbagai jenis burung pada waktu tertentu. Hal ini menjadikan Mambarak Forest sebagai tempat wisata yang harmonis dengan alam.
           </p>`
       }
     ];
