--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     // Inisialisasi peta
     var map = L.map('map', {
-      center: [-1.67044, 114.90530],
-      zoom: 14,
+      center: [-1.6666477880839679, 114.91594989187165],
+      zoom: 15,
       layers: [osm]
     });
 
